--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,19 +1,19 @@
 @font-face {
   font-family: 'Aboreto';
-  src: url('../fonts/Aboreto-Regular.ttf');
+  src: url('../fonts/AnyConv.com__Aboreto-Regular.woff2');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Corm';
-  src: url('../fonts/CormorantInfant-Light.ttf');
+  src: url('../fonts/AnyConv.com__CormorantInfant-Light.woff2');
   font-weight: 100;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Noto-normal';
-  src: url('../fonts/NotoSerifJP-ExtraLight.otf');
+  src: url('../fonts/AnyConv.com__NotoSerifJP-ExtraLight.woff2');
   font-display: swap;
 }
 
