--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,15 @@
   font-display: swap;
 }
 
+body {
+  font-family: 'Aboreto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #f5f5f5;
+  color: #000;
+  overflow: hidden;
+}
 
 .menu {
     all:unset;
@@ -27,60 +36,32 @@
     cursor: pointer;
 }
 
-main {
-    position: relative;
+.slider-content {
     width: 100%;
     height: 100%;
-    overflow: hidden;
-  }
-  
-  #slider {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
     position: relative;
-    
-  }
-
-  .canvas-container {
-    width: 100%;
-    height: auto;
-    position: absolute;
 }
 
-.canvas-container + canvas {
+.canvas-bg-blur {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -50;
+  filter: blur(10px);}
+
+.canvas-bg-dist {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 40;
 }
 
-
-  #slider img {
-    width: 100%;
-    max-width: 100%;
-    z-index: 0;
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  .slider-inner {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    z-index: 5;
-    display: none;
-  }
-  
-  #slider-content {
-    padding: 0 10px;
-  }
-  #slider-content h1 {
-    font-family: "Aboreto", serif;
-    font-size: 30px;
-    letter-spacing: -1px;
-    color: white;
-    line-height: 30px;
-    margin: 20px 0 60px;
-  }
-  
+.hero-vision {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+}
