--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,32 @@ body {
   overflow: hidden;
 }
 
+.loader {
+  position: fixed;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 9999;
+  transition: .3s;
+}
+
+.loader__bg {
+  width: 5.555vw;
+  height: 100%;
+  background: #000;
+}
+
+.gs-anim {
+  will-change: transform;
+}
+
+.gs-anim {
+  opacity: 0;
+  transform: translateY(-30px);
+}
 header {
   position: fixed;
   top: 0;
@@ -212,5 +238,6 @@ header > h1 {
   writing-mode: vertical-rl;
   text-align: center;
   color: #fff;
-  font-family: 'Corm', sans-serif;
+  font-family: 'Noto-normal', sans-serif;
+  line-height: 50px;
 }
