--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body {
   left: 0;
   pointer-events: none;
   z-index: 9999;
-  transition: .3s;
+  transition: .1s;
 }
 
 .loader__bg {
@@ -136,6 +136,34 @@ header > h1 {
   .hero-vision {
     left: 5%;
   }
+}
+
+/* オーバーレイ */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* 必要に応じて調整 */
+}
+
+.overlay-white {
+  background: #fff;
+  z-index: 2; /* 白いオーバーレイが最前面に来るように */
+}
+
+.overlay-white2 {
+  background: #fff;
+  z-index: 2; /* 白いオーバーレイが最前面に来るように */
+}
+
+.overlay-red {
+  background: #000;
+}
+
+.overlay-red2 {
+  background: #000;
 }
 
 /* ハンバーガーメニュー */
