--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #f5f5f5;
-  color: #000;
+  background: #3C3939;
+  color: #fff;
 }
 
 .body-inner {
@@ -32,7 +32,6 @@ body {
 
 .loader {
   position: fixed;
-  display: flex;
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -40,12 +39,33 @@ body {
   pointer-events: none;
   z-index: 9999;
   transition: .1s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 5rem;
 }
+
+#countdown {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: countdown 3s linear;
+}
+
+@keyframes countdown {
+  /* 1秒ごとに数字を更新するアニメーション */
+  0%, 33% { content: '3'; }
+  34%, 66% { content: '2'; }
+  67%, 100% { content: '1'; }
+}
+
 
 .loader__bg {
   width: 5.555vw;
   height: 100%;
-  background: #000;
+  background: #3C3939;
 }
 
 .gs-anim {
@@ -159,11 +179,11 @@ header > h1 {
 }
 
 .overlay-red {
-  background: #000;
+  background: #3C3939;
 }
 
 .overlay-red2 {
-  background: #000;
+  background: #3C3939;
 }
 
 /* ハンバーガーメニュー */
