--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,21 @@ body {
   box-sizing: border-box;
   background: #3C3939;
   color: #fff;
+  z-index: 1;
+  background-image: url('../src/assets/images/bg/logo-bg.svg');
+  background-repeat: repeat;
+}
+
+.light {
+  width: 10vw;
+	height: 10vw;
+	border-radius: 50%;
+	background: transparent;
+	position: absolute;
+	top: 20%;
+	left: 10%;
+	filter: blur(5vw);
+  box-shadow: 0px 0px 0px 99999px rgba(60, 57, 57, 1);
 }
 
 .body-inner {
@@ -117,7 +132,7 @@ header > h1 {
   width: 100%;
   height: 100%;
   z-index: -50;
-  filter: blur(10px);}
+}
 
 .canvas-bg-dist {
   position: relative;
@@ -150,6 +165,17 @@ header > h1 {
   font-family: 'Noto-normal', sans-serif;
   font-size: 18px;
   color: #fff;
+}
+
+.white-outlined-text {
+  color: #000; /* テキストの色 */
+  text-shadow: 
+    -1px -1px 0 #fff,  
+     1px -1px 0 #fff,
+    -1px  1px 0 #fff,
+     1px  1px 0 #fff; /* 白い境界線 */
+  opacity: 0;
+  transform: translateY(-20px);
 }
 
 @media screen and (max-width: 768px){
@@ -220,7 +246,7 @@ header > h1 {
 
 .menu-bg > nav > ul > li > a {
   text-decoration: none;
-  color: #1E1E1E;
+  color: #3C3939;
   width: 100%;
 }
 
@@ -334,7 +360,7 @@ header > h1 {
 }
 
 .news-list > li > hr {
-  margin: 40px 0;
+  margin: 30px 0;
 }
 
 .new {
