--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,6 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   transform: translateY(-100%) translateX(-50%);
 }
 
-
 body {
   margin: 0;
   padding: 0;
@@ -88,6 +87,7 @@ body {
   background-image: url('../src/assets/images/bg/logo-bg.svg');
   background-repeat: repeat;
 }
+
 
 .light {
   width: 10vw;
@@ -120,22 +120,6 @@ body {
   color: #fff;
   font-size: 5rem;
 }
-
-#countdown {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation: countdown 3s linear;
-}
-
-@keyframes countdown {
-  /* 1秒ごとに数字を更新するアニメーション */
-  0%, 33% { content: '3'; }
-  34%, 66% { content: '2'; }
-  67%, 100% { content: '1'; }
-}
-
 
 .loader__bg {
   width: 5.555vw;
@@ -643,5 +627,22 @@ header > h1 {
 }
 
 .parallax-right {
-  margin-top: -18vw;
+  margin-top: 5vw;
+  position: absolute;
+  top: 15vw;
+  z-index: 900;
+}
+
+.stickyvideo-wrapper {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+.sticky-image01 > .sticky-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: sticky;
+  top: 0;
 }
