--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,30 @@ body {
   box-shadow: 0px 0px 0px 99999px rgba(60, 57, 57, 1);
 }
 
+.light::before {
+  content: "";
+  position: absolute;
+  top: -50%; /* 元の要素より大きく、中心をずらす */
+  left: -50%;
+  width: 100%; /* グラデーションの広がりを調整 */
+  height: 100%;
+  background: linear-gradient(45deg, rgba(60, 57, 57, 0.6), rgba(0, 0, 0, 0.6), rgba(248, 249, 249, 0.6), rgba(42, 45, 45, 0.6));
+  filter: blur(2vw);
+  animation: rotateGradient 5s infinite linear;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+@keyframes rotateGradient {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 .body-inner {
   overflow: hidden;
 }
