--- a/src/style.css
+++ b/src/style.css
@@ -413,14 +413,21 @@ header > h1 {
 }
 
 .news-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 20px;
-  list-style: none;
-  flex-wrap: wrap;
-  margin-top: 72px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content: center;
+    margin-top: 72px;
+    gap: 10px;
 }
+
+.news-list > li {
+  list-style: none;
+  padding: 0 20px;
+  cursor: pointer;
+  max-width: 734px;
+  width: 100%;
+  height: auto;
+} 
 
 .news-list > li > h3 {
   font-family: 'Noto-normal', sans-serif;
@@ -428,10 +435,11 @@ header > h1 {
   margin-top: 30px;
 }
 
-.news-list > li > img {
+.news-list > li img {
+  max-width: 734px;
   width: 100%;
-  height: 100%;
-  aspect-ratio: 734 / 256;
+  height: auto;
+  object-fit: cover;
 }
 
 .news-list > li > p {
@@ -462,6 +470,7 @@ header > h1 {
     padding: 0 20px;
   }
   .news-list {
+    grid-template-columns: repeat(1, auto);
     justify-content: center;
   }
 }
