--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   display: inline-block;
   padding: 1.4rem 1rem;
   transition: .2s;
-  color: #3C3939;
+  color: #22201E;
   text-decoration: none;
   overflow: hidden;
   position: relative;
@@ -81,7 +81,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #3C3939;
+  background: #22201E;
   color: #fff;
   z-index: 1;
   background-image: url('../src/assets/images/bg/logo-bg.svg');
@@ -111,7 +111,7 @@ body {
 	top: 20%;
 	left: 10%;
 	filter: blur(5vw);
-  box-shadow: 0px 0px 0px 99999px rgba(60, 57, 57, 1);
+  box-shadow: 0px 0px 0px 99999px rgba(34, 32, 30, 1);
 }
 
 .light::before {
@@ -161,7 +161,7 @@ body {
 .loader__bg {
   width: 5.555vw;
   height: 100%;
-  background: #3C3939;
+  background: #22201E;
 }
 
 @media screen and (max-width: 768px) {
@@ -314,7 +314,7 @@ header > h1 {
 }
 
 .white-outlined-text {
-  color: #3C3939; /* テキストの色 */
+  color: #22201E; /* テキストの色 */
   /* text-shadow: 
     -1px -1px 0 #fff,  
      1px -1px 0 #fff,
@@ -353,11 +353,11 @@ header > h1 {
 }
 
 .overlay-red {
-  background: #3C3939;
+  background: #22201E;
 }
 
 .overlay-red2 {
-  background: #3C3939;
+  background: #22201E;
 }
 
 /* ハンバーガーメニュー */
@@ -368,7 +368,8 @@ header > h1 {
   left: -100%; /* 初期状態で見えないように設定 */
   width: 100%;
   height: 100%;
-  background: #000; /* 背景色 */
+  background: #090908
+; /* 背景色 */
   z-index: 50; /* メニューボタンの背後に配置 */
   font-family: 'Corm', sans-serif;
 }
@@ -394,7 +395,7 @@ header > h1 {
 
 .menu-bg > nav > ul > li > a {
   text-decoration: none;
-  color: #3C3939;
+  color: #22201E;
   width: 100%;
 }
 
@@ -781,7 +782,7 @@ header > h1 {
   font-size: clamp(3.125rem, -2.5rem + 28.13vw, 31.25rem);
   color: rgba(0,0,0,.0);
   white-space: nowrap;
-  -webkit-text-stroke: 1px #201f1f;
+  -webkit-text-stroke: 1px #2F2C29;
 }
 
 .parallax-right {
@@ -895,7 +896,8 @@ header > h1 {
 
 footer {
   margin-top: 244px;
-  background-color: #000;
+  background-color: #090908
+;
   position: relative;
   min-height: 900px;
   padding: 100px 0;
