--- a/src/style.css
+++ b/src/style.css
@@ -910,7 +910,7 @@ footer {
   text-decoration: none;
   display: block;
   position: relative;
-
+  text-align: center;
 }
 
 .link-effect:after {    
@@ -975,6 +975,7 @@ footer {
 @media screen and (max-width: 768px) {
   footer {
     min-height: 400px;
+    margin-top: 100px;
   }
   .footer-section {
     padding: 30px 20px;
