--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,32 @@ body {
   z-index: -1;
 }
 
+.light2 {
+  width: 15vw;
+	height: 15vw;
+	border-radius: 50%;
+	background: transparent;
+	position: absolute;
+	top: 20%;
+	left: 10%;
+	filter: blur(5vw);
+  box-shadow: 0px 0px 0px 99999px rgba(34, 32, 30, 1);
+}
+
+.light2::before {
+  content: "";
+  position: absolute;
+  top: -50%; /* 元の要素より大きく、中心をずらす */
+  left: -50%;
+  width: 200%; /* グラデーションの広がりを調整 */
+  height: 200%;
+  background: linear-gradient(45deg, rgba(60, 57, 57, 0.6), rgba(0, 0, 0, 0.6), rgba(248, 249, 249, 0.6), rgba(42, 45, 45, 0.6));
+  filter: blur(2vw);
+  animation: rotateGradient 5s infinite linear;
+  border-radius: 50%;
+  z-index: -1;
+}
+
 @keyframes rotateGradient {
   0% {
     transform: rotate(0deg);
