--- a/src/policy.css
+++ b/src/policy.css
@@ -4,3 +4,16 @@
     position: relative;
     z-index: 9;
 }
+
+.wrapper h2 {
+    font-family: 'Noto-normal', sans-serif;
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+
+.wrapper p {
+    font-family: 'Noto-normal', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
