--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,7 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   position: relative;
   width: 320px;
   text-align: center;
+  z-index: 90;
 }
 
 .button-effect span:first-child {
