--- a/src/careers.css
+++ b/src/careers.css
@@ -1,5 +1,7 @@
 /* business.css */
-
+* {
+    font-family: 'Noto-normal', sans-serif;
+}
 
 .business-hero, .careers-info {
     max-width: calc(100% - 360px); /* 180px on each side */
