--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,105 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   font-display: swap;
 }
 
+
+/* ミュージック再生画面 */
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container #music-on {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 40%;
+  z-index: 99999;
+}
+
+.container #music-off {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  z-index: 99999;
+}
+
+.gradient-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 99999;
+}
+
+.gradient-canvas {
+  position: absolute;
+  width: 150%;
+  height: 150%;
+  top: -25%;
+  left: -25%;
+  filter: blur(50px);
+  transition-property: all;
+  transition-duration: 6s;
+}
+
+.blobs-container {
+  position: relavtive;
+  width: 100%;
+  height: 100%;
+}
+
+.blob {
+  position: absolute;
+  border-radius: 9999px;
+  aspect-ratio: 1 / 1;
+  transition-property: all;
+  transition-duration: 6s;
+}
+
+#color-0 {
+  width: 100%;
+  left: -30%;
+}
+
+#color-1 {
+  width: 100%;
+  bottom: -50%;
+  right: -50%;
+}
+
+#color-2 {
+  width: 50%;
+  top: 70%;
+  left: 20%;
+}
+
+#color-3 {
+  width: 100%;
+  top: -110%;
+  left: -30%;
+}
+
+
+
 /* ボタン */
 
 
