--- a/src/style.css
+++ b/src/style.css
@@ -98,7 +98,7 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   top: -7px;
   left: -7px;
   padding: 7px;
-  box-shadow: 0 0 0 4px #fff;
+  box-shadow: 0 0 0 4px #22201E;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -109,8 +109,8 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
 
 #music-on:hover {
   background: white;
-  color: #41ab6b;
-  border: 2px solid #41ab6b;
+  color: #22201E;
+  border: 2px solid #22201E;
   transition: .6s;
   scale: 1.1;
 }
@@ -125,7 +125,7 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
 
 #music-off:hover {
   background: rgba(255, 255, 255, 0.6);
-  border: 2px solid #fff;
+  border: 2px solid #22201E;
   transition: .6s;
   scale: 1.1;
 
@@ -188,10 +188,7 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   left: -30%;
 }
 
-
-
 /* ボタン */
-
 
 .block-button {
   display: inline-flex;
