--- a/src/style.css
+++ b/src/style.css
@@ -131,6 +131,12 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
 
 }
 
+@media screen and (max-width: 768px) {
+  .btn-wrapper {
+    flex-direction: column;
+  }
+}
+
 .gradient-container {
   position: relative;
   width: 100%;
@@ -421,10 +427,11 @@ header {
   display: flex;
   justify-content: space-between;
   background: transparent;
-  z-index: 100;
   width: 100%;
   padding: 20px;
-  z-index: 100;
+  z-index: 10000;
+  transform: translateY('-10%');
+  opacity: 0;
 }
 
 header > h1 {
@@ -581,8 +588,9 @@ header > h1 {
   height: 100%;
   background: #090908
 ; /* 背景色 */
-  z-index: 50; /* メニューボタンの背後に配置 */
+  z-index: 50000; /* メニューボタンの背後に配置 */
   font-family: 'Corm', sans-serif;
+  overflow: hidden;
 }
 
 .menu-bg > nav {
@@ -596,6 +604,7 @@ header > h1 {
   display: flex;
   flex-direction: column;
   color: #fff;
+  font-size: clamp(1.5rem, -0.075rem + 7.88vw, 9.375rem);
 }
 
 .menu-bg > nav > ul > li {
@@ -607,7 +616,6 @@ header > h1 {
   text-decoration: none;
   color: #22201E;
   width: 100%;
-  font-size: clamp(1.5rem, -0.075rem + 7.88vw, 9.375rem);
 }
 
 [class*="text-stroke-fill-"]:before, [class*="text-fill-"]:before {
