--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@ html{-webkit-text-size-adjust:100%;box-sizing:border-box;-moz-tab-size:4;tab-siz
   overflow: hidden;
 }
 
+.hidden {
+  display: none !important;
+}
+
 
 /* ミュージック再生画面 */
 .container {
@@ -295,7 +299,7 @@ body {
   filter: blur(2vw);
   animation: rotateGradient 5s infinite linear;
   border-radius: 50%;
-  z-index: 11;
+  z-index: 6;
 }
 
 .light2 {
@@ -462,7 +466,7 @@ header > h1 {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 6;
+  z-index: 5;
 }
 
 .canvas-bg-dist {
