--- a/src/style.css
+++ b/src/style.css
@@ -452,7 +452,7 @@ header {
   justify-content: space-between;
   background: transparent;
   width: 100%;
-  padding: 20px;
+  padding: 40px;
   z-index: 10000;
 }
 
@@ -478,6 +478,33 @@ header > h1 {
     border-radius: 50%;
     background: #fff;
     cursor: pointer;
+    position: relative;
+    transition: all .3s;
+}
+
+.menu-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fd9e27;
+  z-index: -1;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: .3s;
+
+}
+.menu-btn:hover::before {
+  transform: scale(1.2);
+  box-shadow: 0 0 10px #fd9e27;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    padding: 20px;
+  }
 }
 
 /* サウンドアニメーション */
