--- a/src/style.css
+++ b/src/style.css
@@ -452,15 +452,20 @@ header {
   justify-content: space-between;
   background: transparent;
   width: 100%;
-  padding: 40px;
+  padding: 20px 40px;
   z-index: 10000;
 }
 
-header > h1 {
+header > a {
   display: flex;
   font-family: 'Aboreto', sans-serif;
   color: #fff;
-  align-items: center;
+  text-decoration: none;
+}
+
+header > a > h1 {
+  display: flex;
+  align-items: start;
   width: 100%;
   gap: 5px;
 }
