--- a/src/style.css
+++ b/src/style.css
@@ -882,7 +882,31 @@ header > a > h1 {
   margin-top: 30px;
 }
 
-.news-list > li img {
+.news-img-wrapper {
+  overflow: hidden;
+  position: relative;
+  max-width: 734px;
+  height: auto;
+}
+
+.img-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.img-overlay-bgcolor {
+  background-color: #22201E;
+  z-index: 3;
+}
+
+.img-overlay-black {
+  background-color: #000;
+}
+
+.news-img-wrapper img {
   max-width: 734px;
   width: 100%;
   height: auto;
