--- a/src/style.css
+++ b/src/style.css
@@ -957,14 +957,29 @@ header > a > h1 {
   min-height: 967px;
 }
 
-.ouebusiness-section > img {
-  width: 100%;
+.ourbusiness-img-wrapper {
+  overflow: hidden;
+  position: relative;
+  max-width: 1300px;
   height: auto;
-  max-width: 1299px;
+  margin-right: calc(50% - 50vw);
+}
+
+.ourbusiness-img-wrapper img {
+  height: auto;
+  max-width: 1300px;
+  width: 100%;
+  height: 800px;
   object-fit: cover;
-  position: absolute;
-  top: 0;
-  right: -180px;
+}
+
+.our-img-overlay-bgcolor {
+  background-color: #22201E;
+  z-index: 2;
+}
+
+.our-img-overlay-black {
+  background-color: #000;
 }
 
 .ouebusiness-section-text {
